--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,3 +11,18 @@
 body {
   margin: 0;
 }
+
+html {
+  
+  @media (min-width: 701px ) and (max-width: 1600px) {
+    font-size: 1vw;
+  }
+
+  @media (min-width: 1601px )  {
+    font-size: 1.013rem;
+  }
+
+  @media (max-width: 700px )  {
+    font-size: 0.662rem;
+  }
+}
